# libveritas

./: .commitlintrc.yml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release-plz.toml  update-elfs.sh
.github/workflows/: commitlint.yml  publish-go.yml  publish-kotlin-android.yml  publish-kotlin-jvm.yml  publish-maven.yml  publish-npm.yml  publish-pypi.yml  publish-react-native.yml  publish-swift.yml  release-plz.yml  test.yml
bindings/android/: build.gradle.kts  settings.gradle.kts
bindings/go/: README.md
bindings/python/: Cargo.toml  README.md  pyproject.toml
bindings/python/libveritas/: __init__.py
bindings/python/src/: lib.rs
bindings/react-native/: README.md  package.json  tsconfig.json  ubrn.config.yaml
bindings/react-native/src/: NativeReactNativeLibveritas.ts  index.ts
bindings/uniffi/: Cargo.toml  uniffi.toml
bindings/uniffi/src/: lib.rs
bindings/wasm/: Cargo.toml  README.md  node.js
bindings/wasm/src/: lib.rs
examples/: generate_fixture.rs
examples/fixture/: anchors-real.json  anchors.json
examples/js/: verify.mjs
examples/kotlin/: verify.kt
examples/swift/: verify.swift
methods/: Cargo.toml
methods/guest/: Cargo.toml
scripts/: generate-bindings.sh
testutil/: Cargo.toml
testutil/examples/: generate_fixture.rs
testutil/src/: fixture.rs  lib.rs
veritas/: Cargo.toml
veritas/src/: builder.rs  cert.rs  constants.rs  lib.rs  msg.rs  names.rs  sname.rs
veritas/tests/: fixture_tests.rs  integration_tests.rs
zk/: Cargo.toml
zk/src/: guest.rs  lib.rs
