[package]
name = "libveritas_methods"
# Pinned independently of the workspace. Bumping this implies the guest ELF /
# image ID changed (a consensus contract). DO NOT inherit anything from the
# workspace, or release-plz will touch this crate on every workspace release.
version = "0.1.1"
edition = "2021"   # risc0 build environment is on 2021
publish = false

[build-dependencies]
risc0-build = { version = "3.0.5" }

[package.metadata.risc0]
methods = ["guest"]
