[package]
name = "libveritas_testutil"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
libveritas = { workspace = true }
libveritas_zk = { workspace = true }
sip7 = { workspace = true }
spacedb = { workspace = true }
spaces_protocol = { workspace = true }
spaces_nums = { workspace = true }
borsh_utils = { workspace = true }
borsh = { version = "1.6", features = ["derive", "std"] }
bitcoin = { version = "0.32", default-features = false, features = ["rand-std"] }
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
serde_json = "1.0"

[[bin]]
name = "generate-fixture"
path = "../examples/generate_fixture.rs"
