[package]
name = "libveritas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Offline verification library for Spaces protocol certificates and zone records."
documentation = "https://docs.rs/libveritas"
readme = "../README.md"
keywords = ["spaces", "verification", "merkle", "zk"]
categories = ["cryptography", "data-structures"]

[features]
elf = []

[dependencies]
libveritas_zk = { workspace = true }
spacedb = { workspace = true }
spaces_protocol = { workspace = true }
spaces_nums = { workspace = true }
sip7 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
risc0-zkvm = { version = "3.0.5", default-features = false, features = ["std"] }
borsh = { version = "1.6", features = ["derive", "std"] }
hex = "0.4"
serde_json = "1.0"

[dev-dependencies]
borsh_utils = { workspace = true }
bitcoin = { version = "0.32", default-features = false, features = ["rand-std"] }
libveritas_testutil = { path = "../testutil" }