[package]
name = "libveritas_zk"
version = "0.1.0"
edition = "2024"

[dependencies]
spacedb = { git = "https://github.com/buffrr/spacedb.git", branch = "borsh", default-features = false }
borsh = { version = "1.5", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
