[package]
name = "libveritas_zk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "ZK guest types and helpers for libveritas."
documentation = "https://docs.rs/libveritas_zk"
keywords = ["spaces", "zk", "risc0"]
categories = ["cryptography"]

[dependencies]
spacedb = { workspace = true }
borsh = { version = "1.6", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
