[package]
name = "libveritas-uniffi"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "libveritas_uniffi"

[dependencies]
libveritas = { path = "../../veritas" }
sip7 = { workspace = true }
borsh = { version = "1.6" }
serde = { version = "1.0" }
serde_json = "1.0"
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
spaces_nums = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
