[package]
name = "libveritas-uniffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "libveritas_uniffi"

[dependencies]
libveritas = { workspace = true }
sip7 = { workspace = true }
serde = { version = "1.0" }
serde_json = "1.0"
uniffi = { version = "0.29", features = ["cli"] }
thiserror = "2"
spaces_nums = { workspace = true }
spaces_protocol = { workspace = true }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
