[package]
name = "libveritas-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
libveritas = { workspace = true }
sip7 = { workspace = true }
serde = { version = "1.0" }
serde_json = "1.0"
wasm-bindgen = "0.2"
js-sys = "0.3"
spaces_nums = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"
